--- a/style.css
+++ b/style.css
@@ -28,14 +28,17 @@ svg {
 .light-theme {
   background-color: #fff;
   --color-background: rgb(252, 250, 250);
-  --color-text: #f7f7f2;
+  /* --color-text: #f7f7f2; */
+  --color-text: #0a0a0a;
+
   --color-p: #034b46;
 }
 
 .dark-theme {
   background-color: black;
   --color-background: rgba(43, 41, 41, 0.978);
-  --color-text: #0a0a0a;
+  /* --color-text: #0a0a0a; */
+  --color-text: white;
   --color-p: #00c5b8;
 }
 
@@ -547,6 +550,41 @@ h3 {
     transform: translateX(0);
   }
 }
+
+/* Contact ---------------------------------------------------- */
+
+.contact-links {
+  display: flex;
+  margin: 0 300px;
+  justify-content: space-between;
+  align-items: center;
+}
+.contact-links a {
+}
+
+.contact-links a i {
+  /* font-size: 76px; */
+  font-size: 120px;
+  color: var(--color-p);
+}
+
+.contact-links a:hover {
+  filter: brightness(2);
+  animation: rotate3DAnimation 0.5s ease-in-out;
+}
+
+@keyframes rotate3DAnimation {
+  0% {
+    transform: rotateY(0deg);
+  }
+  50% {
+    transform: rotateY(180deg);
+  }
+  100% {
+    transform: rotateY(0deg);
+  }
+}
+
 /* Media Queries ---------------------------------------------------- */
 @media (max-width: 599px) {
   .title {
