--- a/style.css
+++ b/style.css
@@ -495,10 +495,14 @@ h3 {
 }
 
 .card-links a:hover {
-  filter: brightness(2);
+  filter: brightness(3);
+}
+.card-links a:hover i {
+  transform: scale(1.3);
 }
 .card-links i {
   font-size: 32px;
+  transition: all 0.2s ease-in-out;
 }
 
 .carousel-next {
@@ -560,17 +564,18 @@ h3 {
   align-items: center;
 }
 .contact-links a {
+  opacity: 0;
+  transform: translateY(80%);
 }
 
 .contact-links a i {
-  /* font-size: 76px; */
   font-size: 120px;
   color: var(--color-p);
 }
 
 .contact-links a:hover {
   filter: brightness(2);
-  animation: rotate3DAnimation 0.5s ease-in-out;
+  animation: rotate3DAnimation 0.5s ease-in-out forwards;
 }
 
 @keyframes rotate3DAnimation {
@@ -581,7 +586,7 @@ h3 {
     transform: rotateY(180deg);
   }
   100% {
-    transform: rotateY(0deg);
+    transform: rotateY(360deg);
   }
 }
 
