--- a/style.css
+++ b/style.css
@@ -32,16 +32,20 @@ li {
 .light-theme {
   background-color: #fff;
   --color-background: rgb(252, 250, 250);
-  --color-text: #101010;
-  --color-p: #034b46;
-  --color-text2: rgb(236, 236, 236);
+  --color-main-title: rgb(246, 246, 246);
+  --color-p-title: #00032c72;
+  --color-p: #246971de;
+  --color-text: rgb(39, 38, 38);
+  --color-floor: #011222cd;
 }
 
 .dark-theme {
   background-color: black;
   --color-background: rgba(43, 41, 41, 0.978);
-  --color-text: white;
-  --color-p: #00c5b8;
+  --color-main-title: rgb(32, 31, 31);
+  --color-p-title: #00032c8a;
+  --color-p: #00fae9df;
+  --color-text: rgb(243, 235, 235);
   --color-text2: rgb(33, 33, 33);
 }
 
@@ -52,11 +56,11 @@ canvas {
   z-index: -1;
 }
 h1 {
-  letter-spacing: 0.8rem;
+  letter-spacing: 0.2rem;
 }
 p,
 h3 {
-  letter-spacing: 0.1rem;
+  letter-spacing: 0.01rem;
 }
 
 /* Three Model  --------------------------------------------*/
@@ -238,13 +242,10 @@ h3 {
 }
 
 .title-main {
-  font-size: 20rem;
+  font-size: 24rem;
   font-weight: 700;
-  /* font-family: "Kanit", sans-serif; */
-  /* font-family: "Archivo Black", sans-serif; */
-  font-family: "Nunito", sans-serif;
-
-  color: var(--color-text-light);
+  font-family: "Kanit", sans-serif;
+  color: var(--color-main-title);
   filter: drop-shadow(3px 1px rgb(159, 249, 162))
     drop-shadow(3.5px 2px rgb(250, 247, 143))
     drop-shadow(4px 3px rgb(168, 243, 255))
@@ -255,8 +256,8 @@ h3 {
 .firstLine {
   width: 430px;
   position: absolute;
-  top: 2%;
-  left: 5%;
+  top: -12%;
+  left: 2%;
   transform: translate(-50%, -50%);
   transform: translateY(100%);
   opacity: 0;
@@ -268,23 +269,24 @@ h3 {
 
 .secondLine {
   position: absolute;
-  top: 35%;
-  left: 19%;
+  top: 27%;
+  left: 12%;
   transform: translate(-50%, -50%);
   transform: translateY(100%);
   opacity: 0;
 }
 
 .title-sub {
-  font-size: 3rem;
+  font-size: 4rem;
   position: absolute;
   top: 38%;
-  left: 36%;
+  left: 36.5%;
   font-weight: 700;
   opacity: 0;
-  color: var(--color-p);
+  color: var(--color-p-title);
   text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.39);
   filter: drop-shadow(6px 5px 1px #0404047d);
+  transform: translateX(-25%) translateY(-25%);
 }
 .text_1 {
   animation: text1;
@@ -362,7 +364,7 @@ h3 {
 }
 .title-main-second {
   font-size: 4rem;
-  color: var(--color-text);
+  color: var(--color-p);
   text-align: center;
   margin: 50px 0px 50px 0px;
   opacity: 0;
@@ -385,7 +387,7 @@ h3 {
 }
 .title3 {
   text-align: left;
-  margin: 120px 0px 10px 50px;
+  margin: 180px 0px 10px 50px;
 }
 .title3 span:nth-of-type(even) {
   color: var(--color-p);
@@ -408,7 +410,6 @@ h3 {
   padding: 30px;
   border-radius: 10px;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-
   transform: translateX(-50%);
   opacity: 0;
 }
