--- a/style.css
+++ b/style.css
@@ -911,7 +911,7 @@ h3 {
     width: 100%;
     top: 10%;
     left: auto;
-    text-align: center;
+    /* text-align: center; */
   }
   .secondLine {
     font-size: 6.5rem;
