--- a/style.css
+++ b/style.css
@@ -387,7 +387,7 @@ h3 {
 }
 .title3 {
   text-align: left;
-  margin: 180px 0px 10px 50px;
+  margin: 250px 0px 0px 50px;
 }
 .title3 span:nth-of-type(even) {
   color: var(--color-p);
@@ -523,15 +523,15 @@ h3 {
 .card-carousel {
   --card-width: 80%;
   /* --card-max-width: 380px; */
-  --card-max-width: 350px;
+  --card-max-width: 500px;
   /* --card-height: 520px; */
-  --card-height: 480px;
+  --card-height: 620px;
   /* --carousel-min-width: 600px; */
   --carousel-min-width: 300px;
   z-index: 1;
   position: relative;
   /* margin: 0 auto; */
-  margin: 50px 100px 0 0;
+  margin: 0px 100px 0 0;
   width: 100%;
   opacity: 0;
   transform: translateX(50%);
@@ -552,8 +552,8 @@ h3 {
 
 .card {
   position: absolute;
-  width: 350px;
-  height: 450px;
+  width: 450px;
+  height: 580px;
   border-radius: 100px;
   box-shadow: 8px 10px 10px rgba(0, 0, 0, 0.169);
   overflow: hidden;
@@ -642,11 +642,11 @@ h3 {
 }
 
 .card-header {
-  font-size: 28px;
+  font-size: 32px;
   margin: 10px 0 0 10px;
 }
 .card-summary {
-  font-size: 18px;
+  font-size: 24px;
   margin: 10px;
   text-align: justify;
 }
@@ -668,7 +668,7 @@ h3 {
   border-radius: 25px;
   background-color: var(--color-p);
   color: var(--color-text);
-  font-size: 12px;
+  font-size: 16px;
 }
 .card-links {
   position: absolute;
@@ -684,7 +684,7 @@ h3 {
 .card-links a {
   margin: 10px;
   display: inline-block;
-  color: var(--color-p);
+  color: var(--color-text);
 }
 
 .card-links a:hover {
@@ -694,7 +694,7 @@ h3 {
   transform: scale(1.3);
 }
 .card-links i {
-  font-size: 32px;
+  font-size: 42px;
   transition: all 0.2s ease-in-out;
 }
 
