--- a/style.css
+++ b/style.css
@@ -407,18 +407,14 @@ h3 {
   max-width: 450px;
   height: 470px;
   margin: 0 0 0 100px;
-  background-color: rgba(255, 255, 255, 0.3);
   padding: 30px;
-  border-radius: 10px;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
   transform: translateX(-50%);
   opacity: 0;
-  /* From https://css.glass */
   background: rgba(255, 255, 255, 0.27);
   border-radius: 16px;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(5.2px);
-  -webkit-backdrop-filter: blur(5.2px);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
   border: 1px solid rgba(255, 255, 255, 0.58);
 }
 .summary-paragraph {
@@ -427,9 +423,7 @@ h3 {
   word-spacing: 1rem;
   color: var(--color-text);
 }
-.every-second-word {
-  color: var(--color-text-dark);
-}
+
 .educational-skills {
   color: var(--color-text);
   font-size: 1.4rem;
@@ -438,14 +432,15 @@ h3 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* max-width: 450px; */
   height: 470px;
   margin: 0 100px 0 0;
-  background-color: rgba(255, 255, 255, 0.3);
   padding: 30px;
-  border-radius: 10px;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-
+  background: rgba(255, 255, 255, 0.27);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  border: 1px solid rgba(255, 255, 255, 0.58);
   transform: translateX(+50%);
   opacity: 0;
 }
@@ -454,7 +449,7 @@ h3 {
   margin: 0 0 20px 0;
 }
 .educational-table {
-  color: var(--color-text-dark);
+  color: var(--color-text);
   list-style: circle;
   padding: 25px;
   font-size: 1.15rem;
@@ -763,9 +758,10 @@ h3 {
   flex-direction: column;
   /* margin: 50px 100px; */
   justify-content: space-around;
-  align-items: start;
+  align-items: center;
 }
 .contact-links a {
+  margin: 5px;
   opacity: 0;
   transform: translateY(80%);
 }
@@ -946,6 +942,7 @@ h3 {
     font-size: 3rem;
     margin: 200px 0px 0px 10px;
     transform: translateX(-10%);
+    text-align: center;
   }
   .title2 {
     font-size: 2.5rem;
@@ -1008,6 +1005,9 @@ h3 {
   }
   .card-links {
     left: 20%;
+  }
+  .contact-links a {
+    transform: translateY(-50%);
   }
 
   .card-links i {
