--- a/style.css
+++ b/style.css
@@ -756,7 +756,7 @@ h3 {
 .contact-links {
   display: flex;
   flex-direction: column;
-  /* margin: 50px 100px; */
+  margin: 120px 350px 0 0;
   justify-content: space-around;
   align-items: center;
 }
@@ -914,7 +914,7 @@ h3 {
   }
   .firstLine {
     width: 100%;
-    top: 38%;
+    top: 40%;
     left: auto;
     text-align: center;
     justify-content: center;
@@ -930,7 +930,7 @@ h3 {
   .title-sub {
     font-size: 1.5rem;
     left: 25%;
-    top: 59%;
+    top: 60%;
   }
 
   /*                        Second section                              */
